# SPARQ_structed_like

./: README.md  mutation_gen_main.py  open_router_simple_usage.py  pyproject.toml
client/: chain_base.py
client/concrete/: math_skill_grader.py  sparq_mutation_gen.py  sparq_mutation_multi_gen.py
manager/: mutation_gen_manager.py
model/: groq_llm.py  open_router_llm.py
