[project]
name = "sparq-structed-like"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.26",
    "langchain-experimental>=0.3.4",
    "langchain-groq>=0.3.6",
    "setuptools>=80.9.0",
    "tqdm>=4.67.1",
    "wheel>=0.45.1",
]
